--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaAttributesTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaAttributesTemplate.vm
@@ -6,7 +6,7 @@ public enum METAATTRIBUTES implements org.kevoree.modeling.api.meta.MetaAttribut
 #set($attIdx = 0)
 #set($attIdxMax = $classDeclaration.attributes.size() - 1)
 #foreach($attribute in $classDeclaration.attributes)
-    ${attribute.getName().toUpperCase()}("$attribute.getName()",$enumIdx,#if($attribute.get)true#{else}false#end, #if($attribute.id)true#{else}false#end,MetaType.$attribute.type.toUpperCase())#if($attIdx < $attIdxMax),
+    ${attribute.getName().toUpperCase()}("$attribute.getName()",$enumIdx, 0, #if($attribute.id)true#{else}false#end,org.kevoree.modeling.api.meta.MetaType.$attribute.type.toUpperCase(), org.kevoree.modeling.api.strategy.ExtrapolationStrategies.DISCRETE.strategy())#if($attIdx < $attIdxMax),
 #{else};
 #end
 #set($enumIdx = $enumIdx + 1)
@@ -15,46 +15,57 @@ public enum METAATTRIBUTES implements org.kevoree.modeling.api.meta.MetaAttribut
 #end
 
 
-    private String name;
+    private String _name;
 
-    private int index;
+    private int _index;
 
-    private boolean learned;
+    private double _precision;
 
-    private boolean key;
+    private boolean _key;
 
-    private MetaType metaType;
+    private org.kevoree.modeling.api.meta.MetaType _metaType;
+
+    private org.kevoree.modeling.api.strategy.ExtrapolationStrategy _extrapolationStrategy;
 
     public int index() {
-        return index;
+        return _index;
     }
 
     public String metaName() {
-        return name;
+        return _name;
     }
 
-    public boolean learned() {
-        return learned;
+    public double precision() {
+        return _precision;
     }
 
     public boolean key() {
-        return key;
+        return _key;
     }
 
-    public MetaType metaType() {
-        return metaType;
+    public org.kevoree.modeling.api.meta.MetaType metaType() {
+        return _metaType;
     }
 
     public org.kevoree.modeling.api.meta.MetaClass origin(){
         return ${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View.METACLASSES.${classDeclaration.fqn.toUpperCase().replace(".","_")};
     }
 
-    METAATTRIBUTES(String name, int index, boolean learned, boolean key, MetaType metaType) {
-        this.name = name;
-        this.index = index;
-        this.learned = learned;
-        this.key = key;
-        this.metaType = metaType;
+    public org.kevoree.modeling.api.strategy.ExtrapolationStrategy strategy() {
+        return _extrapolationStrategy;
+    }
+
+    public void setExtrapolationStrategy(org.kevoree.modeling.api.strategy.ExtrapolationStrategy extrapolationStrategy) {
+        this._extrapolationStrategy = extrapolationStrategy;
+    }
+
+    METAATTRIBUTES(String name, int index, double precision, boolean key, org.kevoree.modeling.api.meta.MetaType metaType, org.kevoree.modeling.api.strategy.ExtrapolationStrategy extrapolationStrategy) {
+        this._name = name;
+        this._index = index;
+        this._precision = precision;
+        this._key = key;
+        this._metaType = metaType;
+        this._extrapolationStrategy = extrapolationStrategy;
     }
 }
 
