--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
@@ -13,7 +13,7 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
         }
         org.kevoree.modeling.api.time.TimeTree resolvedTimeTree = timeTree;
         if (resolvedTimeTree == null) {
-            resolvedTimeTree = new org.kevoree.modeling.api.time.impl.DefaultTimeTree().insert(now());
+            resolvedTimeTree = new org.kevoree.modeling.api.time.DefaultTimeTree().insert(now());
         }
         switch (clazz.index()) {
 #set($clsIdx = 0)
