--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
@@ -3,23 +3,23 @@ package ${classDeclaration.pack}.impl;
 
 public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.AbstractKObject<${classDeclaration.pack}.${classDeclaration.name}, ${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View> implements ${classDeclaration.pack}.${classDeclaration.name} {
 
-    public ${classDeclaration.name}Impl(${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View factory, org.kevoree.modeling.api.meta.MetaClass metaClass, long kid, Long now, org.kevoree.modeling.api.KDimension dimension, org.kevoree.modeling.api.time.TimeTree timeTree) {
-        super(factory, metaClass, kid, now, dimension, timeTree);
+    public ${classDeclaration.name}Impl(${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View p_factory, org.kevoree.modeling.api.meta.MetaClass p_metaClass, long p_uuid, Long p_now, org.kevoree.modeling.api.KDimension p_dimension, org.kevoree.modeling.api.time.TimeTree p_timeTree) {
+        super(p_factory, p_metaClass, p_uuid, p_now, p_dimension, p_timeTree);
     }
 
     @Override
     public org.kevoree.modeling.api.meta.MetaAttribute[] metaAttributes() {
-        return METAATTRIBUTES.values();
+        return ${classDeclaration.pack}.${classDeclaration.name}.METAATTRIBUTES.values();
     }
 
     @Override
         public org.kevoree.modeling.api.meta.MetaReference[] metaReferences() {
-        return METAREFERENCES.values();
+        return ${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.values();
     }
 
     @Override
     public org.kevoree.modeling.api.meta.MetaOperation[] metaOperations() {
-        return METAOPERATION.values();
+        return ${classDeclaration.pack}.${classDeclaration.name}.METAOPERATION.values();
     }
 
 
@@ -27,30 +27,30 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
     #if($attribute.single)
     @Override
     public ${attribute.getType()} get${context.generationContext.helper.toCamelCase($attribute.getName())}() {
-        return ($attribute.getType()) get(METAATTRIBUTES.$attribute.getName().toUpperCase());
+        return ($attribute.getType()) get(${classDeclaration.pack}.${classDeclaration.name}.METAATTRIBUTES.$attribute.getName().toUpperCase());
     }
 
     @Override
-    public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase(${attribute.getName()})}($attribute.getType() _value) {
-        set(METAATTRIBUTES.$attribute.getName().toUpperCase(), _value);
+    public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase(${attribute.getName()})}($attribute.getType() p_obj) {
+        set(${classDeclaration.pack}.${classDeclaration.name}.METAATTRIBUTES.$attribute.getName().toUpperCase(), p_obj);
         return this;
     }
     #{else}
     @Override
-    public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase(${attribute.getName()})}(${attribute.getType()} _value) {
-        mutate(org.kevoree.modeling.api.KActionType.ADD, METAATTRIBUTES.${attribute.getName().toUpperCase()}, _value, true, true, null);
+    public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase(${attribute.getName()})}(${attribute.getType()} p_obj) {
+        mutate(org.kevoree.modeling.api.KActionType.ADD, ${classDeclaration.pack}.${classDeclaration.name}.METAATTRIBUTES.${attribute.getName().toUpperCase()}, p_obj, true);
         return this;
     }
 
     @Override
-    public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase(${attribute.getName()})}(${attribute.getType()} _value) {
-        mutate(org.kevoree.modeling.api.KActionType.REMOVE, METAATTRIBUTES.${attribute.getName().toUpperCase()}, _value, true, true, null);
+    public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase(${attribute.getName()})}(${attribute.getType()} p_obj) {
+        mutate(org.kevoree.modeling.api.KActionType.REMOVE, ${classDeclaration.pack}.${classDeclaration.name}.METAATTRIBUTES.${attribute.getName().toUpperCase()}, p_obj, true;
         return this;
     }
 
     @Override
-    public void each${context.generationContext.helper.toCamelCase(${attribute.getName()})}(org.kevoree.modeling.api.Callback<${attribute.getType()}> callback, org.kevoree.modeling.api.Callback<Throwable> end) {
-        each(METAATTRIBUTES.${attribute.getName().toUpperCase()}, callback, end);
+    public void each${context.generationContext.helper.toCamelCase(${attribute.getName()})}(org.kevoree.modeling.api.Callback<${attribute.getType()}> p_callback, org.kevoree.modeling.api.Callback<Throwable> p_end) {
+        each(${classDeclaration.pack}.${classDeclaration.name}.METAATTRIBUTES.${attribute.getName().toUpperCase()}, p_callback, p_end);
     }
     #end
 #end
@@ -59,35 +59,35 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
 #foreach($ref in $classDeclaration.references)
     #if($ref.single)
     @Override
-    public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} _value) {
-        mutate(org.kevoree.modeling.api.KActionType.SET, METAREFERENCES.${ref.getName().toUpperCase()}, _value, true);
+    public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} p_obj) {
+        mutate(org.kevoree.modeling.api.KActionType.SET, ${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.${ref.getName().toUpperCase()}, p_obj, true);
         return this;
     }
 
     @Override
-    public void get${context.generationContext.helper.toCamelCase(${ref.getName()})}(org.kevoree.modeling.api.Callback<${ref.getType().fqn}> callback) {
-        each(METAREFERENCES.${ref.getName().toUpperCase()}, callback, null);
+    public void get${context.generationContext.helper.toCamelCase(${ref.getName()})}(org.kevoree.modeling.api.Callback<${ref.getType().fqn}> p_callback) {
+        each(${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.${ref.getName().toUpperCase()}, p_callback, null);
     }
     #{else}
     @Override
-    public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} obj) {
-        mutate(org.kevoree.modeling.api.KActionType.ADD, METAREFERENCES.${ref.getName().toUpperCase()}, obj, true);
+    public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} p_obj) {
+        mutate(org.kevoree.modeling.api.KActionType.ADD, ${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.${ref.getName().toUpperCase()}, p_obj, true);
         return this;
     }
 
     @Override
-    public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} obj) {
-        mutate(org.kevoree.modeling.api.KActionType.REMOVE, METAREFERENCES.${ref.getName().toUpperCase()}, obj, true);
+    public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} p_obj) {
+        mutate(org.kevoree.modeling.api.KActionType.REMOVE, ${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.${ref.getName().toUpperCase()}, p_obj, true);
         return this;
     }
 
     @Override
-    public void each${context.generationContext.helper.toCamelCase(${ref.getName()})}(org.kevoree.modeling.api.Callback<${ref.getType().fqn}> callback, org.kevoree.modeling.api.Callback<Throwable> end) {
-        each(METAREFERENCES.${ref.getName().toUpperCase()}, callback, end);
+    public void each${context.generationContext.helper.toCamelCase(${ref.getName()})}(org.kevoree.modeling.api.Callback<${ref.getType().fqn}> p_callback, org.kevoree.modeling.api.Callback<Throwable> p_end) {
+        each(${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.${ref.getName().toUpperCase()}, p_callback, p_end);
     }
 
     public int sizeOf${context.generationContext.helper.toCamelCase($ref.getName())}() {
-        return size(METAREFERENCES.${ref.getName().toUpperCase()});
+        return size(${classDeclaration.pack}.${classDeclaration.name}.METAREFERENCES.${ref.getName().toUpperCase()});
     }
     #end
 #end
