--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
@@ -33,7 +33,7 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
 #set($lastIdx = $class.lastIndexOf(".")+1)
     @Override
     public $class create$class.substring($lastIdx)() {
-        return ($class) create(METACLASSES.$class.toUpperCase().replace(".","_"));
+        return ($class) this.create(METACLASSES.$class.toUpperCase().replace(".","_"));
     }
 #end
 
