--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
@@ -15,12 +15,10 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
 #set($clsIdx = 0)
 #foreach($class in $context.model.classifiers)
     #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
-            case $clsIdx:
-                return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}.impl.${class.fqn.substring($lastIdx)}Impl(this, ${context.metaModelPackage}.${context.metaModelName}View.METACLASSES.$class.fqn.toUpperCase().replace(".","_"), p_key, this.now(), this.dimension(), p_timeTree);
+            case $clsIdx : return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}.impl.${class.fqn.substring($lastIdx)}Impl(this, p_key, p_timeTree, p_clazz);
 #set($clsIdx = $clsIdx+1)
 #end
-            default:
-                return null;
+            default : return null;
         }
     }
 
