--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
@@ -3,8 +3,8 @@ package ${classDeclaration.pack}.impl;
 
 public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.AbstractKObject<${classDeclaration.pack}.${classDeclaration.name}, ${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View> implements ${classDeclaration.pack}.${classDeclaration.name} {
 
-    public ${classDeclaration.name}Impl(${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View p_factory, org.kevoree.modeling.api.meta.MetaClass p_metaClass, long p_uuid, Long p_now, org.kevoree.modeling.api.KDimension p_dimension, org.kevoree.modeling.api.time.TimeTree p_timeTree) {
-        super(p_factory, p_metaClass, p_uuid, p_now, p_dimension, p_timeTree);
+    public ${classDeclaration.name}Impl(${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View p_factory, long p_uuid, org.kevoree.modeling.api.time.TimeTree p_timeTree, org.kevoree.modeling.api.meta.MetaClass p_metaClass) {
+        super(p_factory, p_uuid, p_timeTree, p_metaClass);
     }
 
     @Override
@@ -19,7 +19,7 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
 
     @Override
     public org.kevoree.modeling.api.meta.MetaOperation[] metaOperations() {
-        return ${classDeclaration.pack}.${classDeclaration.name}.METAOPERATION.values();
+        return ${classDeclaration.pack}.${classDeclaration.name}.METAOPERATIONS.values();
     }
 
 
