--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaOperationTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaOperationTemplate.vm
@@ -1,8 +1,9 @@
 #set($classDeclaration = $context.classDeclaration)
-public enum METAOPERATION implements org.kevoree.modeling.api.meta.MetaOperation {
+    public enum METAOPERATIONS implements org.kevoree.modeling.api.meta.MetaOperation {
 #if($classDeclaration.operations.size() == 0)
-;//Nothing in this ENUM
+        ;//Nothing in this ENUM
 #{else}
+
 #set($opIdx = 0)
 #set($opIdxMax = $classDeclaration.operations.size() - 1)
 #foreach($op in $classDeclaration.operations)
@@ -13,28 +14,26 @@ public enum METAOPERATION implements org.kevoree.modeling.api.meta.MetaOperation
     #set($opIdx = $opIdx + 1)
 #end
 #end
-    private String _name;
+        private String _name;
+        private int _index;
 
-    private int _index;
+        METAOPERATIONS(String name, int index) {
+            this._name = name;
+            this._index = index;
+        }
 
-    public int index() {
-        return _index;
+        public int index() {
+            return _index;
+        }
+
+        public String metaName() {
+            return _name;
+        }
+
+        public org.kevoree.modeling.api.meta.MetaClass origin() {
+            return ${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View.METACLASSES.${classDeclaration.fqn.toUpperCase().replace(".","_")};
+        }
     }
-
-    public String metaName() {
-        return _name;
-    }
-
-    public org.kevoree.modeling.api.meta.MetaClass origin() {
-        return ${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View.METACLASSES.${classDeclaration.fqn.toUpperCase().replace(".","_")};
-    }
-
-    METAOPERATION(String name, int index) {
-        this._name = name;
-        this._index = index;
-    }
-
-}
 
 #* @vtlvariable name="context" type="org.kevoree.modeling.generator.ClassGenerationContext" *#
 #* @vtlvariable name="classDeclaration" type="org.kevoree.modeling.ast.MModelClass" *#
