--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
@@ -94,6 +94,17 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
 
 #foreach($operation in $classDeclaration.operations)
     public void ${operation.name}(#foreach($p in $operation.inputParams)$p.type $p.name, #{end}org.kevoree.modeling.api.Callback<#if(${operation.returnParam})$operation.returnParam.type#{else}Boolean#end> result){
+        Object[] ${operation.name}_params = new Object[$operation.inputParams.size()];
+    #set($paramIndex = 0)
+#foreach($p in $operation.inputParams)
+        ${operation.name}_params[$paramIndex] = $p.name;
+#set($paramIndex = $paramIndex + 1)
+#{end}
+        view().dimension().universe().storage().eventBroker().call(this, METAOPERATIONS.${operation.name.toUpperCase()}, ${operation.name}_params, new org.kevoree.modeling.api.Callback<Object>() {
+            public void on(Object o) {
+                result.on((#if(${operation.returnParam})$operation.returnParam.type#{else}Boolean#end)o);
+            }
+        });
     }
 #end
 
