--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
@@ -1,7 +1,7 @@
 #set($classDeclaration = $context.classDeclaration)
 package ${classDeclaration.pack}.impl;
 
-public class ${classDeclaration.name}Impl extends ${context.generationContext.metaModelPackage}.impl.Abstract${context.generationContext.metaModelName}Object implements ${classDeclaration.pack}.${classDeclaration.name} {
+public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.AbstractKObject implements ${classDeclaration.pack}.${classDeclaration.name} {
 
     public ${classDeclaration.name}Impl(${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View p_factory, long p_uuid, org.kevoree.modeling.api.time.TimeTree p_timeTree, org.kevoree.modeling.api.meta.MetaClass p_metaClass) {
         super(p_factory, p_uuid, p_timeTree, p_metaClass);
@@ -109,6 +109,11 @@ public class ${classDeclaration.name}Impl extends ${context.generationContext.me
         });
     }
 #end
+
+    @Override
+    public ${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View view() {
+        return (${context.generationContext.metaModelPackage}.${context.generationContext.metaModelName}View) super.view();
+    }
 
 }
 #* @vtlvariable name="context" type="org.kevoree.modeling.generator.ClassGenerationContext" *#
